# vae-faces

./: .gitignore  README.md  pyproject.toml
scripts/: celebamask_hq_download.py  celebamask_hq_prep.py  data_download.py  generated_images_grid.py  morph.py  morph_grid.py  reconstruction_grid.py  train.py
src/face_vae/: data.py  loss.py  model.py  morph.py  train.py
